--- a/backyard/package.json
+++ b/backyard/package.json
@@ -1,17 +1,20 @@
 {
   "name": "backyard",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "type": "module",
-  "author": "",
+  "author": "Shpa13",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.9",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.0"
