created cleck auth pages, and some initial styling

--- a/frontyard_mobile/app.json
+++ b/frontyard_mobile/app.json
@@ -8,6 +8,9 @@
     "scheme": "frontyardmobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "assetBundlePatterns":[
+      "assets/images/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.frontyard-mobile"
