--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .DS_Store
 .AppleDouble
 .LSOverride
+.vscode
 
 # Icon must end with two \r
 Icon
@@ -364,3 +365,4 @@ gradle-app.setting
 .nfs*
 
 # End of https://www.toptal.com/developers/gitignore/api/react,reactnative,node,macos
+
